# virtual-sensors-triangulation

./: .gitignore  README.md  pyproject.toml  results.ipynb  run_experiments.py  sensitivity_analysis.csv  setup.cfg
simulator/: __main__.py  sensor.py  simulation_environment.py  simulator.py  topology.py  wsn_matplotlib.py  wsn_networkx.py
simulator/components/: sensor.py  topology.py
simulator/heuristics/: first_fit_proposal.py  idw.py  knn.py  proposed_heuristic.py
simulator/misc/: helper_methods.py  load_dataset.py  object_collection.py
