[tool.poetry]
name = "logical-sensors-triangulation"
version = "0.1.0"
description = ""
authors = ["Pauo Severo"]

[tool.poetry.dependencies]
python = "^3.7.1"
networkx = "^2.6.1"
simpy = "^4.0.1"
matplotlib = "3.4.2"
pandas = "1.2.4"
openpyxl = "^3.0.7"
fnss = "^0.9.1"
wheel = "0.36.2"
Shapely = "^1.7.1"
Cartopy = "^0.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
