[tool.poetry]
name = "virtual-sensors-triangulation"
version = "0.1.0"
description = ""
authors = ["Paulo Severo"]

[tool.poetry.dependencies]
python = "^3.7.1"
networkx = "^2.6.1"
matplotlib = "3.4.2"
pandas = "1.2.4"
wheel = "0.36.2"
Shapely = "^1.7.1"
Cartopy = "^0.19.0"
sklearn = "^0.0"
numpy = "^1.21.0"
black = "^21.7b0"
pylint = "^2.9.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
